# PeroPix

./: .gitignore  CLAUDE.md  DEV_NOTES.md  LICENSE  PeroPix-App.bat  PeroPix-Desktop.bat  PeroPix.bat  README.en.md  README.md  app.py  backend.py  build.py  index.html  requirements-core.txt  requirements.txt  tmpclaude-b256-cwd  version.json
.github/workflows/: build-and-release.yml  build-macos.yml  build-test.yml  build.yml  discord-notify.yml  notify-discord.yml
assets/: color-guide.md
local_engine/: __init__.py  generate.py  generate_comfy_matching.py  lora.py  model_loader.py  model_sampling.py  ops.py  samplers.py  samplers_comfy_matching.py  schedulers.py  utils.py
local_engine/clip/: __init__.py  clip_model.py  sdxl_clip.py  sdxl_clip_comfy_matching.py
local_engine/ldm/: __init__.py
local_engine/ldm/models/: __init__.py  autoencoder.py
local_engine/ldm/modules/: __init__.py  attention.py
local_engine/ldm/modules/diffusionmodules/: __init__.py  model.py  openaimodel.py  util.py
local_engine/ldm/modules/distributions/: __init__.py  distributions.py
prompts/base/: 그림체1.txt
prompts/negative/: 그림체1.txt
scripts/: convert_tags.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test_data/: director_reference_images_cached_data.txt  image.txt  mask.txt
